--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,58 @@
 body {
-  background: #333;
-  color: #fff; }
+  background: #333645;
+  color: #fff;
+  padding: 0;
+  margin: 0; }
+
+li {
+  list-style: none;
+  cursor: pointer; }
+
+a {
+  text-decoration: none; }
+
+button {
+  outline: none;
+  border: none;
+  border-radius: .3rem;
+  margin: 0 1rem;
+  cursor: pointer; }
+
+.navbar {
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 6rem;
+  width: 100%;
+  background: #333645; }
+  .navbar .logo {
+    width: 100%;
+    height: 100%; }
+    .navbar .logo img {
+      height: 100%;
+      object-fit: contain; }
+  .navbar .nav_links ul {
+    display: flex;
+    align-items: center;
+    padding: 0;
+    margin: 0; }
+    .navbar .nav_links ul li a {
+      width: 100%;
+      height: 100%;
+      padding: 2.5rem 1.5rem;
+      color: #fff;
+      transition: all .5s ease-in-out; }
+      .navbar .nav_links ul li a:hover {
+        background: #292b37; }
+    .navbar .nav_links ul button {
+      background: #e19503;
+      color: #333645;
+      padding: 0rem 1.5rem;
+      height: 2rem; }
+
+.slider {
+  width: 100%;
+  height: 100vh;
+  background: url(/assets/wines.jpg) center center no-repeat/cover; }
