--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,74 @@
-$primary-color:#333;
+$primary-color:rgba(51,54,69,1);
+$secondary-color:#e19503;
+$ternary-color:#292b37;
 
 body{
     background: $primary-color;
     color: #fff;
+    padding: 0;
+    margin: 0;
+}
+li{
+    list-style: none;
+    cursor: pointer;
+}
+a{
+    text-decoration: none;
+}
+button{
+    outline: none;
+    border: none;
+    border-radius: .3rem;
+    margin: 0 1rem;
+    cursor: pointer;
+}
+.navbar{
+    position: fixed;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 6rem;
+    width: 100%;
+    background: $primary-color;
+
+    .logo{
+        width: 100%;
+        height: 100%;
+        img{
+            height: 100%;
+            object-fit: contain;
+        }
+    }
+    .nav_links{
+        ul{
+            display: flex;
+            align-items: center;
+            padding: 0;
+            margin: 0;
+            li{
+                a{
+                    width: 100%;
+                    height: 100%;  
+                    padding: 2.5rem 1.5rem;
+                    color: #fff;
+                    transition: all .5s ease-in-out;
+                    &:hover{
+                        background: $ternary-color;
+                    }
+                }
+            }
+            button{
+                background: $secondary-color;
+                color: $primary-color;
+                padding: 0rem 1.5rem;
+                height: 2rem;
+            }
+        }
+    }
+}
+.slider{
+    width: 100%;
+    height: 100vh;
+    background: url(/assets/wines.jpg) center center no-repeat/cover;
 }
